Fixed style on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* THX 4 THE MEMERIES - STYLESHEET  */
+
 * {
     margin: 0;
     padding: 0;
@@ -59,7 +60,7 @@ main {
 }
 
 form#main-search {
-    margin: 25px auto;
+    margin: 5% auto 0 auto;
     padding: 5px;
     width: 100%;
     z-index: 1;
